tests/functions/errors/wrong_arg_type.c.res
[36mERROR: Invalid type, expected [1mint[0m [4min line 11
[0m    c = add(a, 23.1);
               ^~~~
[36mERROR: Invalid type, expected [1mfloat[0m [4min line 12
[0m    d = addf(12, 3.4);
             ^~
[1m[31mCompilation failed with 2 errors
[0m